--- a/UI/index.html
+++ b/UI/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fast Food Fast</title>
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abel|Arvo" rel="stylesheet">
@@ -10,13 +11,13 @@
 </head>
 <body>
   <section id="main_upper_level_container">
-  <section class="section_container">
+    <section class="section_container">
     <div class="headerDiv">
         <div class="menuDiv">
               <ul class="outerUL">
                 <!-- <li><a href="menu.html">Menu</a></li> -->
-                <li><a href="signin.html">Sign in</a></li>
-                <li><a href="guestmenupage.html">Our Menu</a></li>
+                <li><a class="headerLinks" href="signin.html">Sign in</a></li>
+                <li><a class="headerLinks" href="guestmenupage.html">Our Menu</a></li>
                 <!-- <li>
                   <a>Our Menu</a>
                   <ul class="innerUL">
@@ -26,6 +27,8 @@
                 </li> -->
               </ul>
           </div>
+          <label for="toggle">&#9776;</label>
+          <input type="checkbox" id="toggle"/>
     </div>
     <div class="div_container">
       <h1><span id="lbl_fast">FAST</span> AND DELICIOUS</h1>
@@ -36,21 +39,19 @@
       </p>
       <span id="lbl_eat_responsibly">Eat Responsibly</span>
 
-      <!-- <span id="lbl_search">Search</span> -->
       <form class='form_search' action=''>
         <input class='text_search' type='text' placeholder='Search for food'>
         <button type='submit'>Find Food</button>
       </form>
     </div>
   </section>
-</section>
+ </section>
 
   <h2 id="lower_section_title"> Most demanded </h2>
 
-  <section class='lower_section'>
+  <div class='lower_section' class='lower-section-grid-container'>
     <div class='div_products' id="first_product">
-      <img src='images/food4.jpg' width='250px' height='250px' alt='food item'>
-      <!-- <img src='images/food4.jpg' class='img_responsive' alt='food item'> -->
+      <img src='images/food4.jpg' width='180px' height='180px' alt='food item'>
       <h2 class='product_heading'>Food 1</h2>
       <p>
         Describe the food here Lorem ipsum dolor sit amet,
@@ -60,8 +61,7 @@
       </p>
     </div>
     <div class='div_products'>
-      <img src='images/food2.jpg'  width='250px' height='250px' alt='food item'>
-      <!-- <img src='images/food2.jpg' class='img_responsive' alt='food item'> -->
+      <img src='images/food2.jpg'  width='180px' height='180px' alt='food item'>
       <h2 class='product_heading'>Food 2</h2>
       <p>
         Describe the food here Lorem ipsum dolor sit amet,
@@ -71,8 +71,7 @@
       </p>
     </div>
     <div class='div_products'>
-      <img src='images/food3.jpg' width='250px' height='250px' alt='food item'>
-      <!-- <img src='images/food3.jpg' class='img_responsive' alt='food item'> -->
+      <img src='images/food3.jpg' width='180px' height='180px' alt='food item'>
       <h2 class='product_heading'>Food 3</h2>
       <p>
         Describe the food here Lorem ipsum dolor sit amet,
@@ -82,8 +81,7 @@
       </p>
     </div>
     <div class='div_products'>
-      <img src='images/food4.jpg' width='250px' height='250px' alt='food item'>
-      <!-- <img src='images/food3.jpg' class='img_responsive' alt='food item'> -->
+      <img src='images/food4.jpg' width='180px' height='180px' alt='food item'>
       <h2 class='product_heading'>Food 4</h2>
       <p>
         Describe the food here Lorem ipsum dolor sit amet,
@@ -92,6 +90,49 @@
          Ut enim ad minim veniam, quis nostrud exercitation
       </p>
     </div>
-  </section>
+
+    <div class='div_products'>
+      <img src='images/food5.jpg' width='180px' height='180px' alt='food item' />
+      <h2 class='product_heading'>Food 5</h2>
+      <p>
+        Describe the food here Lorem ipsum dolor sit amet,
+         consectetur adipiscing elit, sed do eiusmod tempor
+         incididunt ut labore et dolore magna aliqua.
+         Ut enim ad minim veniam, quis nostrud exercitation
+      </p>
+    </div>
+  </div>
+
+
+
+  <div class="footer">
+    <div class="footer-grid-container">
+      <div class="grid-item">
+        <p><h3>Contact Us</h3>
+          Describe the food here Lorem ipsum dolor sit amet,
+           consectetur adipiscing elit, sed do eiusmod tempor
+        </p>
+      </div>
+      <div class="grid-item">
+        <p><h3>Locate Us at</h3>
+          Describe the food here Lorem ipsum dolor sit amet,
+           consectetur adipiscing elit, sed do eiusmod tempor
+        </p>
+      </div>
+      <div class="grid-item">
+        <p><h3>Add Title</h3>
+          Describe the food here Lorem ipsum dolor sit amet,
+           consectetur adipiscing elit, sed do eiusmod tempor
+        </p>
+      </div>
+      <div class="grid-item">
+        <p><h3>Add Title</h3>
+          Describe the food here Lorem ipsum dolor sit amet,
+           consectetur adipiscing elit, sed do eiusmod tempor
+        </p>
+      </div>
+
+    </div>
+  </div>
 </body>
 </html>
